# Programs

./: .loops.cpp.un~  .random.cpp.un~  functions.cpp  loops.cpp  memoryaddressing.cpp  random.cpp~  stringmethods.cpp  structAndEnum.cpp  ternaryoperator.cpp  vectors.cpp
Learning Files/: OOP.cpp  arrays.cpp  dynamicmemory.cpp  functiontemplace.cpp  helloworld.cpp  multidimensionalarray.cpp  namespacing.cpp  polymorphism.cpp  random.cpp  smartpointers.cpp  switches.cpp  tempCodeRunnerFile.cpp  typeconversion.cpp
Learning Files/Concepts/: input.cpp  math.cpp  recursion.cpp  typedefining.cpp
Learning Files/Graphics/: main.cpp  run.bat
Learning Files/Graphics/Basic Program/: main.cpp
Learning Files/Graphics/Circle Thingy/: Makefile  main.cpp
Learning Files/Graphics/Dynamic Shapes/: main.cpp
Learning Files/Graphics/Pointer/: Makefile  main.cpp
Learning Files/Multiple Files/Basic/: main.cpp
Learning Files/Multiple Files/Classses/: Monster.cpp  Monster.h  (+1 more)
Practice Projects/: Hypotenuse.cpp  arraysorter.cpp  banking.cpp  calculator.cpp  creditvalidator.cpp  guessinggame.cpp  quizGame.cpp  roshambo.cpp  tictactoe.cpp
Projects/Inventory System/: LinkedList.h  build.bat  main.cpp
Projects/Linked List Implementation/: LinkedList.cpp  LinkedList.h  SLinkedList.cpp  SLinkedList.h  build.bat  main.cpp
Projects/Pointer/: CMakeLists.txt  Makefile  build.bat  main.cpp
Projects/Pointer/Entities/: enemy.h
Projects/Pointer/src/: main.cpp
Projects/Pointer/src/Entities/: enemy.cpp  enemy.h
Projects/Rounded Boxes/: CMakeLists.txt  run.bat
Projects/Rounded Boxes/src/: main.cpp  rbox.cpp  rbox.h  slider.cpp  slider.h
(+6 files in other folders)
